Add settings to change timer duration + Improving timer management

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,6 @@
-<app-header></app-header>
+<app-header (timerDurationChanged)="resetTimer()"></app-header>
 
 <div class="container mt-5">
-
-  <div class="d-flex bd-highlight">
-    <button class="btn btn-primary flex-fill bd-highlight" type="button" (click)="selectTomato()">Tomato</button>
-    <button class="btn btn-primary flex-fill bd-highlight" type="button" (click)="selectShortBreak()">Short break</button>
-    <button class="btn btn-primary flex-fill bd-highlight" type="button" (click)="selectLongBreak()">Long break</button>
-  </div>
-
-  <p class="mt-5 text-center fs-1 fw-bold">{{remainingTime | date: "m:ss"}}</p>
-
-
-  <div class="d-flex bd-highlight justify-content-center mt-5">
-    <button type="button" class="btn btn-outline-success" (click)="start()" [disabled]="disableStartButton">Start</button>
-    <button type="button" class="btn btn-outline-danger" (click)="pause()">Stop</button>
-    <button type="button" class="btn btn-outline-dark" (click)="reset()">Reset</button>
-  </div>
+<app-timer></app-timer>
 
 </div>
