--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,6 +5,8 @@
         <i class="bi-alarm"></i>
         <strong>Tomato Timer</strong>
       </a>
+
+      <app-settings (timerDurationChanged)="resetTimer()"></app-settings>
     </div>
   </div>
 </header>
