New basic FAQ page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,10 @@
         <strong>Tomato Timer</strong>
       </a>
 
-      <app-settings (timerDurationChanged)="resetTimer()"></app-settings>
+      <div>
+        <app-settings (timerDurationChanged)="resetTimer()"></app-settings>
+        <app-faq></app-faq>
+      </div>
     </div>
   </div>
 </header>
