--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -49,4 +49,4 @@
   </div>
 </ng-template>
 
-<a class="bi-gear" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="open(content)"></a>
+<a class="bi-gear" data-bs-toggle="modal" (click)="open(content)"></a>
