--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 //
 // Import all of Bootstrap's CSS
 @import '~bootstrap/scss/bootstrap';
-@import "~bootstrap-icons/font/bootstrap-icons.css";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css");
 //
 // Option 2
 //
