New Record history component

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,6 +9,7 @@
       <div>
         <app-settings (timerDurationChanged)="resetTimer()"></app-settings>
         <app-faq></app-faq>
+        <app-log-history></app-log-history>
       </div>
     </div>
   </div>
