--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -5,7 +5,7 @@
   <button class="btn btn-primary flex-fill bd-highlight" type="button" (click)="selectLongBreak()">Long break</button>
 </div>
 
-<p class="mt-5 text-center fs-1 fw-bold">{{remainingTime | date: "m:ss"}}</p>
+<h1 class="mt-5 text-center fs-1 fw-bold">{{remainingTime | date: "m:ss"}}</h1>
 
 
 <div class="d-flex bd-highlight justify-content-center mt-5">
