Improve media query for mobile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header (timerDurationChanged)="resetTimer()"></app-header>
+<div class="wrapper">
+  <div class="container">
+    <app-timer></app-timer>
 
-<div class="container mt-5">
-<app-timer></app-timer>
-
+  </div>
 </div>
