--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
-  <div class="navbar navbar-dark bg-dark shadow-sm">
+  <div class="navbar navbar-dark bg-dark shadow-sm mb-5">
     <div class="container">
       <a href="#" class="navbar-brand d-flex align-items-center">
-        <i class="bi-alarm"></i>
+        <i id="icon_header" class="bi-alarm mr-2"></i>
         <strong>Tomato Timer</strong>
       </a>
 
