Add version into settings form

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -38,7 +38,9 @@
               Long break:
               <input type="text" class="form-control" placeholder="10" aria-label="Tomato" formControlName="longBreak">
             </label>
+
           </div>
+          <label>Version: {{version}}</label>
         </div>
       </div>
     </form>
