Avoid error with initial timing + Add focus on selected TimerType

--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -1,8 +1,14 @@
-<div class="d-flex bd-highlight">
-  <button class="btn btn-primary flex-fill bd-highlight" type="button" (click)="selectTomato()">Tomato</button>
-  <button class="btn btn-primary flex-fill bd-highlight" type="button" (click)="selectShortBreak()">Short break
-  </button>
-  <button class="btn btn-primary flex-fill bd-highlight" type="button" (click)="selectLongBreak()">Long break</button>
+<div class="d-flex btn-group btn-group-toggle" ngbRadioGroup name="selectedTimerType" [(ngModel)]="selectedTimerType"
+     (ngModelChange)="onChangeSelection()">
+  <label ngbButtonLabel class="btn btn-primary">
+    <input ngbButton type="radio" [value]="0"> Tomato
+  </label>
+  <label ngbButtonLabel class="btn btn-primary">
+    <input ngbButton type="radio" [value]="1"> Short break
+  </label>
+  <label ngbButtonLabel class="btn btn-primary">
+    <input ngbButton type="radio" [value]="2"> Long break
+  </label>
 </div>
 
 <h1 class="mt-5 text-center fs-1 fw-bold">{{remainingTime | date: "m:ss"}}</h1>
@@ -10,7 +16,8 @@
 <div id="buttons-container" class="d-flex bd-highlight justify-content-center mt-5">
   <button type="button" class="btn btn-outline-success mr-3" (click)="start()" [disabled]="disableStartButton">Start
   </button>
-  <button id="middle-button" type="button" class="btn btn-outline-danger mr-3" (click)="pause()" [disabled]="disableStopButton">Stop
+  <button id="middle-button" type="button" class="btn btn-outline-danger mr-3" (click)="pause()"
+          [disabled]="disableStopButton">Stop
   </button>
   <button type="button" class="btn btn-outline-dark mr-3" (click)="reset()">Reset</button>
 </div>
