--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -11,7 +11,7 @@
   </label>
 </div>
 
-<h1 class="mt-5 text-center fs-1 fw-bold">{{remainingTime | date: "m:ss"}}</h1>
+<h1 id="timer-title" class="mt-5 text-center fs-1 fw-bold">{{remainingTime | date: "m:ss"}}</h1>
 
 <div id="buttons-container" class="d-flex bd-highlight justify-content-center mt-5">
   <button type="button" class="btn btn-outline-success mr-3" (click)="start()" [disabled]="disableStartButton">Start
