Change icons color

--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -24,4 +24,4 @@
   </div>
 </ng-template>
 
-<a class="bi-question-circle ml-3" data-bs-toggle="modal" (click)="open(content)"></a>
+<a class="bi-question-circle ml-3 text-white" data-bs-toggle="modal" (click)="open(content)"></a>
