--- a/src/app/record-history/record-history.component.html
+++ b/src/app/record-history/record-history.component.html
@@ -34,4 +34,4 @@
   </div>
 </ng-template>
 
-<a class="bi-clock-history ml-3" data-bs-toggle="modal" (click)="open(content)"></a>
+<a class="bi-clock-history ml-3 text-white" data-bs-toggle="modal" (click)="open(content)"></a>
