Add basic footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,14 @@
   <div class="container">
     <app-timer></app-timer>
 
+    <footer class="fixed-bottom">
+      <div class="card text-center">
+        <div class="card-footer text-muted">
+          <a class="mr-5">Contact</a>
+          <app-faq></app-faq>
+        </div>
+      </div>
+    </footer>
+
   </div>
 </div>
