Add Github link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
         <div class="card-footer text-muted">
           <a class="mr-5">Contact</a>
           <app-faq></app-faq>
+          <a href="https://github.com/dr-star/tomato-timer" class="ml-5">Github</a>
         </div>
       </div>
     </footer>
