Update Angular to version 13

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <div class="card text-center">
         <div class="card-footer text-muted">
           <app-faq></app-faq>
-          <a href="https://github.com/dr-star/tomato-timer" class="ml-5">Github</a>
+          <a href="https://github.com/dr-star/tomato-timer" class="ms-5">Github</a>
         </div>
       </div>
     </footer>
