--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -24,4 +24,4 @@
   </div>
 </ng-template>
 
-<a data-bs-toggle="modal" (click)="open(content)">FAQ</a>
+<a href="#" data-bs-toggle="modal" (click)="open(content)">FAQ</a>
