--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="navbar navbar-dark bg-dark shadow-sm mb-5">
     <div class="container">
       <a href="#" class="navbar-brand d-flex align-items-center">
-        <i id="icon_header" class="bi-alarm mr-2"></i>
+        <i id="icon_header" class="bi-alarm me-2"></i>
         <strong>Tomato Timer</strong>
       </a>
 
