--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -51,4 +51,4 @@
   </div>
 </ng-template>
 
-<a class="bi-gear text-white" data-bs-toggle="modal" (click)="open(content)"></a>
+<i class="bi-gear text-white" data-bs-toggle="modal" (click)="open(content)"></i>
