Add info component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="wrapper">
   <div class="container">
     <app-timer></app-timer>
-
+    <app-info></app-info>
     <footer class="fixed-bottom">
       <div class="card text-center">
         <div class="card-footer text-muted">
