Increase setting and history icon size

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -51,4 +51,4 @@
   </div>
 </ng-template>
 
-<i class="bi-gear text-white" data-bs-toggle="modal" (click)="open(content)"></i>
+<i class="bi-gear text-white fs-4" data-bs-toggle="modal" (click)="open(content)"></i>
