--- a/src/app/record-history/record-history.component.html
+++ b/src/app/record-history/record-history.component.html
@@ -34,4 +34,4 @@
   </div>
 </ng-template>
 
-<i class="bi-clock-history ms-3 text-white" data-bs-toggle="modal" (click)="open(content)"></i>
+<i class="bi-clock-history fs-4 ms-3 text-white" data-bs-toggle="modal" (click)="open(content)"></i>
