--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,7 @@
 <header>
   <div class="navbar navbar-dark bg-dark shadow-sm mb-5">
     <div class="container">
-      <a href="#" class="navbar-brand d-flex align-items-center">
-        <i id="icon_header" class="bi-alarm me-2"></i>
-        <strong>Tomato Timer</strong>
-      </a>
+      <h1 class="text-center text-white">Tomato Timer</h1>
 
       <div>
         <app-settings (timerDurationChanged)="resetTimer()"></app-settings>
