Add autostart functionality for breaks

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -11,10 +11,14 @@
       <div class="form-group">
           <h3>Preference</h3>
 
-          <div class="input-group mb-3">
+          <div class="input-group mb-3 flex-column">
             <label>
               <input type="checkbox" aria-label="Tomato" formControlName="showTimerInTitle">
               Show timer in page title:
+            </label>
+            <label>
+              <input type="checkbox" aria-label="Tomato" formControlName="autostartBreaks">
+              Autostart when click on Break:
             </label>
           </div>
       </div>
